--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "next": "^15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
