--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "^15.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^11.0.5",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
