--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.4.1",
     "next": "^15.0.1",
+    "next-cloudinary": "^6.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
